{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 13,
  "lineage": "dd277ec1-d2ac-ddd0-e016-f86441c52d99",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:internet-gateway/igw-072894ba2680e227d",
            "id": "igw-072894ba2680e227d",
            "owner_id": "421433934085",
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-igw",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-igw",
              "Type": "persistent"
            },
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:route-table/rtb-0b23aebfe214d7e51",
            "id": "rtb-0b23aebfe214d7e51",
            "owner_id": "421433934085",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072894ba2680e227d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-public-rt",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-public-rt",
              "Type": "persistent"
            },
            "timeouts": null,
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0039edc330c8f9476",
            "route_table_id": "rtb-0b23aebfe214d7e51",
            "subnet_id": "subnet-0a92708526244606d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:security-group/sg-05a383989bcaf308e",
            "description": "Security group for PostgreSQL database",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "No outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a383989bcaf308e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "PostgreSQL from compute instances",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "job-platform-db-20250817232501254400000002",
            "name_prefix": "job-platform-db-",
            "owner_id": "421433934085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-db-sg",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-db-sg",
              "Type": "persistent"
            },
            "timeouts": null,
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:subnet/subnet-0147447410ca0baab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0147447410ca0baab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421433934085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-private-subnet",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-private-subnet",
              "Type": "persistent"
            },
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:subnet/subnet-0d1d9f836db0c65b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1d9f836db0c65b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421433934085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-private-subnet-2",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-private-subnet-2",
              "Type": "persistent"
            },
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:subnet/subnet-0a92708526244606d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a92708526244606d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "421433934085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-public-subnet",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-public-subnet",
              "Type": "persistent"
            },
            "vpc_id": "vpc-018202ea5ed272462"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421433934085:vpc/vpc-018202ea5ed272462",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d04e15e6c017dbf3",
            "default_route_table_id": "rtb-0e29caccfc389a768",
            "default_security_group_id": "sg-0b68750b3f476c5da",
            "dhcp_options_id": "dopt-0225e25f10991ed4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018202ea5ed272462",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e29caccfc389a768",
            "owner_id": "421433934085",
            "tags": {
              "Environment": "dev",
              "Name": "job-platform-vpc",
              "Type": "persistent"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "job-platform-vpc",
              "Type": "persistent"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}